woodpecker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: woodpecker
  labels:
    pod-security.kubernetes.io/enforce: "baseline"
