woodpecker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: woodpecker
  namespace: woodpecker
spec:
  selector:
    app: woodpecker
  ports:
    - port: 80
      targetPort: 8000
