woodpecker/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: woodpecker-gateway
  namespace: woodpecker
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: woodpecker-cert
      hosts:
        - ci.gwg313.xyz
